# product-api

./: .env.example  .pylintrc  pyproject.toml
app/: config.py  main.py  utils.py
app/core/: db.py
